# tio-game-dash

./: .gitignore  Cargo.toml  build.sh  dev.config.toml  prod.config.toml  run.sh
tio_api/: Cargo.toml
tio_api/src/: app.rs  auth.rs  http.rs  lib.rs  router.rs
tio_api/src/middlewares/: authentication.rs  error_handler.rs  mod.rs
tio_api/src/v1/: administrators.rs  auth.rs  mod.rs  routes.rs  users.rs
tio_bin/: Cargo.toml
tio_bin/src/: main.rs
tio_config/: Cargo.toml
tio_config/src/: lib.rs
tio_db/: .env  Cargo.toml  diesel.toml
tio_db/migrations/2018-07-20-170130_setup/: down.sql  up.sql
tio_db/src/: lib.rs  schema.rs
tio_db/src/models/: administrator_sessions.rs  administrators.rs  mod.rs
tio_utils/: Cargo.toml
tio_utils/src/: lib.rs
