[package]
name = "tio_api"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]

[dependencies]
log = "0.4.3"
uuid = "0.6.5"
actix = "0.5.8"
actix-web = "0.6.14"
lazy_static = "1.0.1"
serde = "1.0.70"
serde_derive = "1.0.70"
num_cpus = "1.8.0"
futures = "0.1.21"
#futures-await = "0.1.1"

[dependencies.tio_db]
path = "../tio_db"

[dependencies.tio_config]
path = "../tio_config"

[dependencies.tio_utils]
path = "../tio_utils"
