[package]
name = "tio_api"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]

[dependencies]
chrono = { version = "0.4.4", features = ["serde"] }
time = "0.1.40"
log = "0.4.3"
uuid = "0.6.5"
actix = "0.7.2"
actix-web = "0.7.1"
lazy_static = "1.0.2"
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"
num_cpus = "1.8.0"
futures = "0.1.23"
frank_jwt = "3.0.0"
#futures-await = "0.1.1"

[dependencies.tio_db]
path = "../tio_db"

[dependencies.tio_config]
path = "../tio_config"

[dependencies.tio_utils]
path = "../tio_utils"
