[package]
name = "tio_db"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]

[dependencies]
chrono = { version = "0.4.4", features = ["serde"] }
serde = "1.0.70"
serde_derive = "1.0.70"
uuid = { version = "0.6.5", features = ["v4"] }
actix = "0.5.8"
actix-web = "0.6.14"
bcrypt = "0.2.0"
diesel_migrations = "1.3.0"

[dependencies.diesel]
version = "1.3.2"
features = ["postgres", "r2d2", "serde_json", "chrono"]

[dependencies.tio_utils]
path = "../tio_utils"
